Further fixes and modernization, dependencies look good now  (#1)
Further basic fixes and clean-up, language level migration, overall modernization

Formatting
Further Java clean-up throughout
Fixed compilation errors in SkyProcStarter, SUMGUI
Removed idea, nbproject folders
Removed aircompressor-0.7.jar; replaced w/gradle dependency
Removed WinRegistry.jar
Added slf4j-simple logger
Removed SkyProcStarter module from this codebase
Removed outdated build material
Took out lev JAR, re-added dependency from GHP; made this repo publishable
Upgraded Gradle to 7.4